# mutation-prediction

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.redis  LICENSE  README.md  check.sh  cli.py  pyproject.toml  redis-entrypoint.sh
data/baseline/: cnn.csv  data.ods  glmnet.csv  mlp+.csv  mlp.csv  rf.csv  scores.csv  svm.csv  xgb.csv
images/: autoencoder-hpo.html  correlation-D.html  correlation-regression.html  correlation.html  datasets-overview.html  embeddings-comparison.html  embeddings-latent.html  embeddings-prottrans-datasets.html  embeddings-prottrans.html  embeddings-spectral-expanded.html  embeddings-spectral.html  epistasis.html  model-comparison-reduced.html  model-comparison.html  model-runtime-reduced.html  model-runtime.html  mutations.html  positional.html  prottrans-downsampling-reduced.html  prottrans-downsampling.html  sensitivity-combinations-A75.html  sensitivity-combinations.html  sensitivity-glmnet-E75.html  sensitivity-kcnn-A75-reduced.html  sensitivity-kcnn-A75.html  sensitivity-mlp-B75.html  sensitivity-mlp-Dr500.html  sensitivity-position.html  size-comparison.html  splits-comparison.html  splits-overview.html
mutation_prediction/: attribution.py  node.py  plotting.py  sequence_logo.py  stats.py  utils.py
mutation_prediction/cli/: __init__.py  attribution.py  precompute_embeddings.py  registry.py  scheduler.py
mutation_prediction/data/: __init__.py  baseline.py  loader.py  msa_helper.py  preprocessing.py  (+1 more)
mutation_prediction_native/: Cargo.toml
tests/: test_embeddings.py  test_utils.py
(+71 files in other folders)
